--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1754,7 +1754,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qQj9yDId1u {
-  background-color: #232323;
+  background-color: #55b4d4;
 }
 .cid-qQj9yDId1u .icons-media-container {
   display: flex;
@@ -1780,7 +1780,7 @@ body {
   padding-bottom: 1.5rem;
 }
 .cid-qQj9yDId1u H1 {
-  color: #ffffff;
+  color: #232323;
   text-align: center;
 }
 .cid-qQj815mgmM .navbar {
