create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2165,7 +2165,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qQjaOBIlui {
-  background: linear-gradient(45deg, #7fd9fc, #6576aa);
+  background: linear-gradient(45deg, #149dcc, #55b4d4);
 }
 .cid-qQjaOBIlui H1 {
   color: #232323;
@@ -2552,7 +2552,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qQjctW8XzK {
-  background: linear-gradient(45deg, #7fd9fc, #6576aa);
+  background: linear-gradient(45deg, #149dcc, #55b4d4);
 }
 .cid-qQjctW8XzK B {
   color: #232323;
@@ -2943,7 +2943,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qQjdkr8yC0 {
-  background: linear-gradient(45deg, #7fd9fc, #6576aa);
+  background: linear-gradient(45deg, #149dcc, #55b4d4);
 }
 .cid-qQjdkr8yC0 B {
   color: #232323;
@@ -3330,7 +3330,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qQje8xRIMN {
-  background: linear-gradient(45deg, #7fd9fc, #6576aa);
+  background: linear-gradient(45deg, #149dcc, #55b4d4);
 }
 .cid-qQje8xRIMN B {
   color: #232323;
@@ -3717,7 +3717,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qQjexRM7lx {
-  background: linear-gradient(45deg, #7fd9fc, #6576aa);
+  background: linear-gradient(45deg, #149dcc, #55b4d4);
 }
 .cid-qQjexRM7lx .mbr-text,
 .cid-qQjexRM7lx .mbr-section-btn {
